# ocr-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  log4rs.yml
.semaphore/: semaphore.yml
.semaphore/scripts/: prepare-docker-image.sh  update-latest-docker-image.sh
src/: char_rec_conv_nn.rs  char_rec_nn.rs  dataset.rs  image_ops.rs  macros.rs  main.rs  polygon.rs  text_detection.rs  text_detection_model.rs  utils.rs
src/char_recognition/: mod.rs  model.rs  options.rs
src/text_detection/: metrics.rs  mod.rs  model.rs  options.rs
test_data/text_det/gts/test/: img494.jpg.txt  img545.jpg.txt
test_data/text_det/gts/train/: img224.jpg.txt  img55.jpg.txt
