[package]
name = "ocr-rs"
version = "0.1.0"
authors = ["Zoran Lazarevic <lazarevic.zoki91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.2.0"
anyhow = "1.0.32"
thiserror = "1.0.20"
lazy_static = "1.4.0"
regex = "1.3.9"
log4rs = "0.13.0"
log = "0.4.11"
image = "0.23.8"
rayon = "1.4.0"
clap = "2.33.3"