[package]
name = "ocr-rs"
version = "0.1.0"
authors = ["Zoran Lazarevic <lazarevic.zoki91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
tch = "0.2.1"
anyhow = "1.0.33"
thiserror = "1.0.21"
lazy_static = "1.4.0"
regex = "1.4.1"
log4rs = "0.13.0"
log = "0.4.11"
image = "0.23.10"
imageproc = { git = "https://github.com/image-rs/imageproc" }
rayon = "1.4.1"
clap = "2.33.3"
geo = "0.15.0"
geo-booleanop = "0.3.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"