[package]
name = "ocr-rs"
version = "0.1.0"
authors = ["Zoran Lazarevic <lazarevic.zoki91@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lazareviczoran/ocr-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
tch = "0.2.1"
anyhow = "1.0.34"
lazy_static = "1.4.0"
regex = "1.4.2"
log4rs = "0.13.0"
log = "0.4.11"
image = "0.23.11"
imageproc = { git = "https://github.com/image-rs/imageproc" }
rayon = "1.5.0"
clap = "2.33.3"
geo = { version = "0.15.0", features = ["use-serde"] }
geo-clipper = { git = "https://github.com/lazareviczoran/geo-clipper", branch = "zl-update-clipper-sys" }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
num-traits = "0.2.14"
itertools = "0.9.0"
